kustomize/base/grafana/grafana-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: grafana
  template:
    metadata:
      labels:
        deployment: grafana
    spec:
      serviceAccountName: grafana
      containers:
        - name: grafana-proxy
          image: oauth-proxy-image
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 20m
              memory: 32Mi
          ports:
            - containerPort: 8443
              name: web
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 8443
              scheme: HTTPS
              path: /oauth/healthz
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8443
              scheme: HTTPS
              path: /oauth/healthz
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          args:
            - -provider=openshift
            - -login-url=https://$(NAME_SPACE_ROUTE)/oauth/authorize
            - -redeem-url=https://$(NAME_SPACE_ROUTE)/oauth/token
            - -openshift-service-account=grafana
            - -https-address=:8443
            - -http-address=
            - -email-domain=*
            - -upstream=http://localhost:3000
            - '-openshift-sar={"resource": "namespaces", "verb": "get", "resourceName": "$(NAMESPACE)", "namespace": "$(NAMESPACE)"}'
            - -tls-cert=/etc/tls/private/tls.crt
            - -tls-key=/etc/tls/private/tls.key
            - -cookie-secret-file=/etc/proxy/secrets/session_secret
            - -cookie-refresh=0
            - -cookie-expire=24h0m0s
            - -cookie-name=_oauth2_graf_bnl
            - -ssl-insecure-skip-verify=true
            - -request-logging=true
            - -skip-auth-regex=^/oauth/healthz
          volumeMounts:
            - mountPath: /etc/tls/private
              name: grafana-tls
            - mountPath: /etc/proxy/secrets
              name: grafana-proxy-secret

        - name: grafana
          image: grafana-image
          args:
            - -config=/etc/grafana/grafana.ini
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 20m
              memory: 32Mi
          ports:
            - name: grafana-http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-config
              mountPath: /etc/grafana
            - name: grafana-tls
              mountPath: /etc/tls/private
            - name: grafana-proxy-secret
              mountPath: /etc/proxy/secrets

      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-datasources
          secret:
            secretName: grafana-datasources
        - name: grafana-proxy-secret
          secret:
            secretName: grafana-proxy-secret
        - name: grafana-tls
          secret:
            secretName: grafana-tls
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-data-pvc
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: Recreate
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
