kustomize/base/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: grafana
  name: grafana
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls
    prometheus.io/scrape: 'true'
    prometheus.io/scheme: 'http'
    prometheus.io/port: '3000'
spec:
  ports:
    - name: grafana
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: grafana
